Refactored Android app